--- a/DjangoGIF/apps/users/templates/users/edit-profile.html
+++ b/DjangoGIF/apps/users/templates/users/edit-profile.html
@@ -1,9 +1,21 @@
 {% extends 'home/base.html' %}
 {% block content %}
+<h1 class="title">Edit Profile</h1>
+
 <form action="/u/{{ username }}/update-profile/" method="post" class="main-form">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" class="blue-btn main-submit" value="Submit">
+    <input type="text" name="nickname" value="{{ nickname }}">
+    <div class="label">Nickname</div>
+
+    <div class="edit-profile-avatar">
+        <div class="img-wrapper">
+            <img src="{{ avatar_url }}">
+        </div>
+        <input type="text" name="avatar_url" value="{{ avatar_url }}">
+        <div class="label">Avatar</div>
+    </div>
+
+    <input type="submit" class="btn green-btn main-submit" value="Submit">
 </form>
 
 {% endblock content %}
