--- a/DjangoGIF/apps/home/templates/home/base.html
+++ b/DjangoGIF/apps/home/templates/home/base.html
@@ -15,7 +15,11 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+        {% if title %}
+        <title>{{ title }} - GifCache</title>
+        {% else %}
         <title>GifCache</title>
+        {% endif %}
     </head>
 
     <body>
@@ -34,8 +38,7 @@
             {% if logged_in %}
             <div class="profile-nav-link">PROFILE
                 <div class="profile-nav-extra">
-                    <a href="/u/{{ username }}">{{ username }}</a>
-                    <a href="/u/{{ username }}/edit-profile">Edit</a>
+                    <a href="/u/{{ username }}">My Profile</a>
                     <a href="{% url 'home:logout' %}">Logout</a>
                 </div>
             </div>
@@ -55,6 +58,10 @@
     <script type="text/javascript" src="http://test.gfycat.com/gfycat_test_june25.js"></script>
     <script type="text/javascript" src="{% static '/static/js/packery-mode.pkgd.min.js' %}"></script>
     <script type="text/javascript" src="{% static '/static/js/main.js' %}"></script>
-
+    {% if title == 'Login' or title == 'Signup' or title == 'Edit Profile' %}
+    <script type="text/javascript">
+        colorMainForm();
+    </script>
+    {% endif %}
     </body>
 </html>
