--- a/DjangoGIF/static/css/main.css
+++ b/DjangoGIF/static/css/main.css
@@ -17,10 +17,6 @@ hr {
 	height: .25em;
 }
 
-form {
-	overflow: hidden;
-}
-
 input {
 	display: block;
 	margin: .5em auto;
@@ -66,17 +62,24 @@ label {
 }
 
 .animate {
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
+	-webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	-o-transition: all .4s ease-in-out;
+	transition: all .4s ease-in-out;
+}
+
+.animate-fast {
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 .animate-bg {
-	-webkit-transition: background-color 0.2s ease-in-out;
-	-moz-transition: background-color 0.2s ease-in-out;
-	-o-transition: background-color 0.2s ease-in-out;
-	transition: background-color 0.2s ease-in-out;
+	-webkit-transition: background-color .4s ease-in-out;
+	-moz-transition: background-color .4s ease-in-out;
+	-o-transition: background-color .4s ease-in-out;
+	transition: background-color .4s ease-in-out;
 }
 
 .img-wrapper {
@@ -101,8 +104,17 @@ label {
 }
 
 .title {
-	margin: 1em;
-	text-align: center;
+	position: absolute;
+	padding: .25em .5em;
+	top: -1.75em;
+	left: .75em;
+	background-color: #25B972;
+	color: white;
+	font-size: 1.75em;
+	text-shadow: 1px 1px 3px #000;
+	border: .15em solid white;
+	border-radius: 1em;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
 .helptext {	
@@ -129,8 +141,9 @@ label {
 	padding: 1em;
 	padding-top: 2em;
 	width: 25em;
-	background-color: rgba(114, 173, 211, 0.8);
-	border-radius: .2em;
+	background-color: #25B972;
+	border: .3em solid white;
+	border-radius: 1em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
@@ -184,172 +197,172 @@ label {
 }
 
 .green-btn {
-	background-color: #25B972;
-	-webkit-box-shadow: 0px 6px 0px #1d8f58;
-	-moz-box-shadow: 0px 6px 0px #1d8f58;
-	box-shadow: 0px 6px 0px #1d8f58; 
-}
-
-.green-btn:hover {	
 	background-color: #1d8f58;
 	-webkit-box-shadow: 0px 6px 0px #14653e;
 	-moz-box-shadow: 0px 6px 0px #14653e;
-	box-shadow: 0px 6px 0px #14653e;
+	box-shadow: 0px 6px 0px #14653e; 
+}
+
+.green-btn:hover {	
+	background-color: #14653e;
+	-webkit-box-shadow: 0px 6px 0px #105031;
+	-moz-box-shadow: 0px 6px 0px #105031;
+	box-shadow: 0px 6px 0px #105031;
 }
 
 .green-btn:active, .green-btn-selected {	
-	background-color: #1d8f58;
-	-webkit-box-shadow: 0px 2px 0px #14653e;
-	-moz-box-shadow: 0px 2px 0px #14653e;
-	box-shadow: 0px 2px 0px #14653e;
-}
-
-.green-btn-selected:hover {
 	background-color: #14653e;
-	box-shadow: none;
 	-webkit-box-shadow: 0px 2px 0px #105031;
 	-moz-box-shadow: 0px 2px 0px #105031;
 	box-shadow: 0px 2px 0px #105031;
 }
 
+.green-btn-selected:hover {
+	background-color: #105031;
+	box-shadow: none;
+	-webkit-box-shadow: 0px 2px 0px #082617;
+	-moz-box-shadow: 0px 2px 0px #082617;
+	box-shadow: 0px 2px 0px #082617;
+}
+
 .blue-btn {
-	background-color: #498FBD;
-	-webkit-box-shadow: 0px 6px 0px #38749b;
-	-moz-box-shadow: 0px 6px 0px #38749b;
-	box-shadow: 0px 6px 0px #38749b; 
+	background-color: #38749b;
+	-webkit-box-shadow: 0px 6px 0px #2a5876;
+	-moz-box-shadow: 0px 6px 0px #2a5876;
+	box-shadow: 0px 6px 0px #2a5876; 
 }
 
 .blue-btn:hover {
-	background-color: #2a5876;
-	-webkit-box-shadow: 0px 6px 0px #1d3c50;
-	-moz-box-shadow: 0px 6px 0px #1d3c50;
-	box-shadow: 0px 6px 0px #1d3c50;
+	background-color: #1d3c50;
+	-webkit-box-shadow: 0px 6px 0px #162e3d;
+	-moz-box-shadow: 0px 6px 0px #162e3d;
+	box-shadow: 0px 6px 0px #162e3d;
 }
 
 .blue-btn:active, .blue-btn-selected {
-	background-color: #2a5876;
-	-webkit-box-shadow: 0px 2px 0px #1d3c50;
-	-moz-box-shadow: 0px 2px 0px #1d3c50;
-	box-shadow: 0px 2px 0px #1d3c50;
-}
-
-.blue-btn-selected:hover {
 	background-color: #1d3c50;
 	-webkit-box-shadow: 0px 2px 0px #162e3d;
 	-moz-box-shadow: 0px 2px 0px #162e3d;
 	box-shadow: 0px 2px 0px #162e3d;
 }
 
-.red-btn {
-	background-color: #ff6767;
-	-webkit-box-shadow: 0px 6px 0px #ff3434;
-	-moz-box-shadow: 0px 6px 0px #ff3434;
-	box-shadow: 0px 6px 0px #ff3434; 
+.blue-btn-selected:hover {
+	background-color: #162e3d;
+	-webkit-box-shadow: 0px 2px 0px #081218;
+	-moz-box-shadow: 0px 2px 0px #081218;
+	box-shadow: 0px 2px 0px #081218;
 }
 
-.red-btn:hover {
+.red-btn {
 	background-color: #ff3434;
 	-webkit-box-shadow: 0px 6px 0px #ff0101;
 	-moz-box-shadow: 0px 6px 0px #ff0101;
-	box-shadow: 0px 6px 0px #ff0101;
+	box-shadow: 0px 6px 0px #ff0101; 
+}
+
+.red-btn:hover {
+	background-color: #ff0101;
+	-webkit-box-shadow: 0px 6px 0px #e70000;
+	-moz-box-shadow: 0px 6px 0px #e70000;
+	box-shadow: 0px 6px 0px #e70000;
 }
 
 .red-btn:active, .red-btn-selected {
-	background-color: #ff3434;
-	-webkit-box-shadow: 0px 2px 0px #ff0101;
-	-moz-box-shadow: 0px 2px 0px #ff0101;
-	box-shadow: 0px 2px 0px #ff0101;
-}
-
-.red-btn-selected:hover {
 	background-color: #ff0101;
 	-webkit-box-shadow: 0px 2px 0px #e70000;
 	-moz-box-shadow: 0px 2px 0px #e70000;
 	box-shadow: 0px 2px 0px #e70000;
 }
 
-.yellow-btn {
-	background-color: #FFA533;
-	-webkit-box-shadow: 0px 6px 0px #ff8f00;
-	-moz-box-shadow: 0px 6px 0px #ff8f00;
-	box-shadow: 0px 6px 0px #ff8f00; 
+.red-btn-selected:hover {
+	background-color: #e70000;
+	-webkit-box-shadow: 0px 2px 0px #b40000;
+	-moz-box-shadow: 0px 2px 0px #b40000;
+	box-shadow: 0px 2px 0px #b40000;
 }
 
-.yellow-btn:hover {
+.yellow-btn {
 	background-color: #ff8f00;
 	-webkit-box-shadow: 0px 6px 0px #cc7200;
 	-moz-box-shadow: 0px 6px 0px #cc7200;
-	box-shadow: 0px 6px 0px #cc7200;
+	box-shadow: 0px 6px 0px #cc7200; 
+}
+
+.yellow-btn:hover {
+	background-color: #cc7200;
+	-webkit-box-shadow: 0px 6px 0px #995600;
+	-moz-box-shadow: 0px 6px 0px #995600;
+	box-shadow: 0px 6px 0px #995600;
 }
 
 .yellow-btn:active, .yellow-btn-selected {	
-	background-color: #ff8f00;
-	-webkit-box-shadow: 0px 2px 0px #cc7200;
-	-moz-box-shadow: 0px 2px 0px #cc7200;
-	box-shadow: 0px 2px 0px #cc7200;
-}
-
-.yellow-btn-selected:hover {
 	background-color: #cc7200;
 	-webkit-box-shadow: 0px 2px 0px #995600;
 	-moz-box-shadow: 0px 2px 0px #995600;
 	box-shadow: 0px 2px 0px #995600;
 }
 
-.purple-btn {
-	background-color: #585ec7;
-	-webkit-box-shadow: 0px 6px 0px #3b42b1;
-	-moz-box-shadow: 0px 6px 0px #3b42b1;
-	box-shadow: 0px 6px 0px #3b42b1; 
+.yellow-btn-selected:hover {
+	background-color: #995600;
+	-webkit-box-shadow: 0px 2px 0px #663900;
+	-moz-box-shadow: 0px 2px 0px #663900;
+	box-shadow: 0px 2px 0px #663900;
 }
 
-.purple-btn:hover {
+.purple-btn {
 	background-color: #3b42b1;
 	-webkit-box-shadow: 0px 6px 0px #2e348b;
 	-moz-box-shadow: 0px 6px 0px #2e348b;
-	box-shadow: 0px 6px 0px #2e348b;
+	box-shadow: 0px 6px 0px #2e348b; 
+}
+
+.purple-btn:hover {
+	background-color: #2e348b;
+	-webkit-box-shadow: 0px 6px 0px #212665;
+	-moz-box-shadow: 0px 6px 0px #212665;
+	box-shadow: 0px 6px 0px #212665;
 }
 
 .purple-btn:active, .purple-btn-selected {
-	background-color: #3b42b1;
-	-webkit-box-shadow: 0px 2px 0px #2e348b;
-	-moz-box-shadow: 0px 2px 0px #2e348b;
-	box-shadow: 0px 2px 0px #2e348b;
-}
-
-.purple-btn-selected:hover {
 	background-color: #2e348b;
 	-webkit-box-shadow: 0px 2px 0px #212665;
 	-moz-box-shadow: 0px 2px 0px #212665;
 	box-shadow: 0px 2px 0px #212665;
 }
 
-.peach-btn {
-	background-color: #FF8359;
-	-webkit-box-shadow: 0px 6px 0px #ff5d26;
-	-moz-box-shadow: 0px 6px 0px #ff5d26;
-	box-shadow: 0px 6px 0px #ff5d26; 
+.purple-btn-selected:hover {
+	background-color: #212665;
+	-webkit-box-shadow: 0px 2px 0px #14183f;
+	-moz-box-shadow: 0px 2px 0px #14183f;
+	box-shadow: 0px 2px 0px #14183f;
 }
 
-.peach-btn:hover {
+.peach-btn {
 	background-color: #ff5d26;
 	-webkit-box-shadow: 0px 6px 0px #f23d00;
 	-moz-box-shadow: 0px 6px 0px #f23d00;
-	box-shadow: 0px 6px 0px #f23d00;
+	box-shadow: 0px 6px 0px #f23d00; 
+}
+
+.peach-btn:hover {
+	background-color: #f23d00;
+	-webkit-box-shadow: 0px 6px 0px #bf3000;
+	-moz-box-shadow: 0px 6px 0px #bf3000;
+	box-shadow: 0px 6px 0px #bf3000;
 }
 
 .peach-btn:active, .peach-btn-selected {
-	background-color: #ff5d26;
-	-webkit-box-shadow: 0px 2px 0px #f23d00;
-	-moz-box-shadow: 0px 2px 0px #f23d00;
-	box-shadow: 0px 2px 0px #f23d00;
-}
-
-.peach-btn-selected:hover {
 	background-color: #f23d00;
 	-webkit-box-shadow: 0px 2px 0px #bf3000;
 	-moz-box-shadow: 0px 2px 0px #bf3000;
 	box-shadow: 0px 2px 0px #bf3000;
+}
+
+.peach-btn-selected:hover {
+	background-color: #bf3000;
+	-webkit-box-shadow: 0px 2px 0px #8c2300;
+	-moz-box-shadow: 0px 2px 0px #8c2300;
+	box-shadow: 0px 2px 0px #8c2300;
 }
 
 .bulk-btn {
@@ -521,14 +534,15 @@ label {
 	right: -1em;	
 	background-color: #25B972;
 	font-size: .75em;
-	width: 6em;
+	min-width: 6em;
 	box-shadow: 1px 5px 15px -5px #000;
 	border: .2em solid white;
 	border-radius: .2em;
 }
 
 .profile-nav-extra a {
-	margin-bottom: 1em;
+	display: block;
+	margin: .25em;
 }
 
 .nav-profile {
@@ -632,7 +646,7 @@ label {
 
 .inner-nav-fixed {
 	position: fixed;
-	z-index: 4;
+	z-index: 10;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -855,6 +869,10 @@ label {
 	color: #ff3434 !important;
 }
 
+.delete-form {
+	margin-bottom: 2em;
+}
+
 .bulk-wrapper {
 	position: absolute;
 	z-index: 3;
@@ -878,7 +896,7 @@ label {
 .bulk-wrapper i {
 	position: relative;
 	top: .25em;
-	left: .25em;
+	left: -3.5em;
 	z-index: 4;
 	color: #ff6767;
 	text-shadow: 1px 1px 3px #000;
@@ -891,7 +909,7 @@ label {
 .gif-grid-element {	
 	position: relative;
 	display: inline-block;
-	z-index: 1;
+	z-index: 5;
 	margin: .25em;
 	padding: .5em;
 	width: 10em;
@@ -902,7 +920,7 @@ label {
 }
 
 .gif-grid-element:hover {
-	z-index: 5;
+	z-index: 7;
 	-ms-transform: scale(1.2);
 	-ms-webkit: scale(1.2);
 	transform: scale(1.2);
@@ -933,7 +951,7 @@ label {
 }
 
 .focused {
-	z-index: 3;
+	z-index: 6;
 	-ms-transform: scale(1.2);
 	-ms-webkit: scale(1.2);
 	transform: scale(1.2);
@@ -963,6 +981,7 @@ label {
 	position: relative;
 	margin: 0;
 	margin-top: 6.25em;
+	text-align: left;
 	color: #498FBD;
 	font-size: 1.15em
 }
@@ -1039,7 +1058,7 @@ label {
 }
 
 .add-tags-title:hover > i, .add-tags-title:active > i {
-	color: #14653e;
+	color: #1d8f58;
 }
 
 .add-tags-title:active, .add-tags-selected {
@@ -1083,19 +1102,21 @@ label {
 .tags-to-be-added {
 	margin: 1em auto;
 	margin-bottom: 0;
-	border: .1em solid #498FBD;
-	border-radius: .2em;
+	border: .1em solid #38749b;
+	border-radius: 1em;
 }
 
 .tags-to-be-added-title {
 	padding: .2em;
-	background-color: #498FBD;
+	background-color: #38749b;
 	color: white;
+	border-radius: 1em 1em 0 0;
 }
 
 .tag-to-be-added {
 	display: block;
-	margin: .25em;	
+	margin: .25em;
+	color: white !important;
 }
 
 .tag-to-be-added i {
@@ -1109,10 +1130,6 @@ label {
 .tag-to-be-added div {
 	display: inline-block;
 	margin-left: .25em;
-}
-
-.tag-to-be-added-value {
-	color: #074C78;
 }
 
 /* Tag Manager *****************************************************************/
